package domain.qmp.prendas;

public enum Categoria {
  CALZADO,
  SUPERIOR,
  INFERIOR,
  ACCESORIO
}
