package domain.qmp.prendas;

public enum Material {
  GABARDINA,
  NYLON,
  ALGODON,
  JEAN,
}
