package domain.servicios.clima.objetos;

public enum AlertaMeteorologico {
  GRANIZO,
  TORMENTA,
  TORNADO,
  HURACAN,
  TERREMOTO,
  VOLCAN,
}
