package domain.servicios.clima.objetos;

public interface SuscriptorClima {
  void cambioCondiciones(EstadoClima estadoClima);
}
